--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -9,6 +9,11 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
+  %li
+    Director:
+    = @movie.director
+  = link_to 'Find Movies With Same Director', director_path(:name => @movie.director)
+
 
 %h3 Description:
 
