--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -12,8 +12,7 @@
   %li
     Director:
     = @movie.director
-  = link_to 'Find Movies With Same Director', director_path(:name => @movie.director)
-
+    = link_to 'Find Movies With Same Director', similar_movies_path(@movie) 
 
 %h3 Description:
 
